# Logen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/models/car/: car.mtl
resources/scenes/: test.scene
resources/shaders/: lit.glsl
src/Editor/: Editor.cpp  EditorInput.cpp  EditorInput.h
src/Engine/: CMakeLists.txt  Camera.h  DirectionalLight.h  Engine.h  Light.h  MeshResource.h  PointLight.h  Scene.cpp  SceneObject.h
src/Engine/Graphics/: Renderer.cpp  Renderer.h  Shader.cpp
src/Engine/IO/: Input.cpp  Input.h
src/Engine/Types/: Vector2.h  Vector3.h
src/core/: CMakeLists.txt  Camera.h  CoreAPI.h  Engine.cpp  Engine.h  Light.h  MeshResource.cpp  Scene.h  Vector3.h
src/core/graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/core/io/: Input.cpp  Input.h
src/editor/: CMakeLists.txt  EditorInput.cpp  EditorInput.h  editor.cpp
src/engine/: CMakeLists.txt  Camera.cpp  Engine.cpp  Engine.h  MeshResource.h  Scene.cpp  SceneObject.cpp  SceneObject.h  Vector2.h
src/engine/graphics/: Mesh.h  Renderer.cpp  Renderer.h  Shader.h
src/engine/io/: Input.cpp  Input.h
src/runtime/: CMakeLists.txt  game.cpp
